# Linux-Raw-Accel

./: .gitignore  AGENTS.md  CMakeLists.txt  Kurulum Komut.txt  README.md  setup.sh
.devin/: config.local.json
.github/workflows/: ci.yml
build-manual/: rawaccel-cli  rawaccel-daemon  rawaccel-gui  test_accel
cli/: main.cpp
config/: default.json
daemon/: daemon.cpp  daemon.hpp  lat_stats.hpp  main.cpp  motion_math.hpp
gui/: app_state.hpp  daemon_comm.inl  devices.inl  graph.inl  main.cpp  profile_mgr.inl  ui_builder.inl  widgets_sync.inl
include/: accel-classic.hpp  accel-jump.hpp  accel-lookup.hpp  accel-natural.hpp  accel-noaccel.hpp  accel-power.hpp  accel-synchronous.hpp  accel-union.hpp  config.hpp  math-vec2.hpp  rawaccel-base.hpp  rawaccel.hpp
scripts/: 99-rawaccel.rules  build.sh  install.sh  kde-fix-accel.sh  rawaccel.desktop  rawaccel.quirks  rawaccel.service  uninstall.sh
scripts/polkit/: 49-rawaccel.rules  org.rawaccel.policy
src/: config.cpp
tests/: fuzz_accel.cpp  fuzz_config.cpp  run_fuzz.sh  run_tests.sh  run_tests_asan.sh  test_accel.cpp
tests/corpus_config/: all_modes.json  extreme_values.json  full_profile.json
